Version 0.51 - 19 March 2008

- XFdrake:
  o use 24bpp on savage (#38750)
  o do use EDID HorizSync/VertRefresh on 16/10 (regression introduced in 0.50)
- keyboarddrake:
  o default romanian keyboard is qwerty (cf #38450)
  o "ro" really is "ro(std_cedilla)" 
    (to be more standard on unpatched xkeyboard-config)
  o "ro(us)" is wrong and not qwerty, use "ro(winkeys)" which is the only
    qwertz from symbols/ro

Version 0.50 - 11 March 2008

- XFdrake:
  o if the EDID gives a valid 16/10 preferred resolution (even if duplicated),
    but no HorizSync/VertRefresh, use a generic flat panel
    HorizSync/VertRefresh (needed for edid.lcd.dell-inspiron-6400, #37971)
  o handle DRIVER2_NO_SSE (from Cards+), needed by nvidia-current requiring SSE

Version 0.49 - 28 February 2008

- XFdrake: background images are now jpeg files

Version 0.48 - 28 February 2008

- XFdrake:
  o when setting background for the resolution, handle "hour"-based
    backgrounds (also add Mandriva.xml symlink)
  
Version 0.47 - 27 February 2008

- XFdrake:
  o when setting background for the resolution, handle "hour"-based backgrounds

Version 0.46 - 18 February 2008

- XFdrake:
  o add 1024x600 (used on Samsung Q1Ultra) (#37889)

Version 0.45 - 5 February 2008

- XFdrake:
  o add 800x480 (used on belinea s.book) (#37486)

Version 0.44 - 25 January 2008

- library for installer:
  o do not force "us" keyboard on everybody that choose "English (American)" 
    (#36575)

Version 0.43 - 23 January 2008

- XFdrake:
  o if the EDID gives a valid EISA_ID, a valid 16/10 preferred resolution, but
    no HorizSync/VertRefresh, use a generic flat panel HorizSync/VertRefresh
    (needed for edid.lcd.Elonex-PR600)

Version 0.42 - 22 January 2008

- XFdrake:
  o sort monitors in text mode so that "Generic|..." monitors do not appear 
    in the middle of "Vendor|..." monitors
- use SendCoreEvents instead of AlwaysCore for wacoms
- mousedrake:
  o use udev in $PATH instead of /lib/udev/usb_id